# lvgl_study

./: .gitignore  CMakeLists.txt  README.md  lv_conf.h  lv_drv_conf.h  main.c
H_tarck/: Diplat.cpp  Diplat.h  Start_up.cpp  Start_up.h  SysIfo.cpp  SysIfo.h
lvgl/src/core/: lv_obj_scroll.h
myui/: OIP.c  animotion.c  animotion.h  myui.c  myui.h
